# FaxRetriever

./: .gitignore  APICreds.py  AboutDialog.py  AddressBook.py  ArchiveManager.py  AutoUpdate.py  CN-FaxRetriever.spec  Customizations.py  FaxRetriever.spec  FaxStatusDialog.py  Options.py  ProgressBars.py  README.md  ReadMe  RetrieveFax.py  RetrieveNumbers.py  RetrieveToken.py  SaveManager.py  SendFax.py  SettingsDecryptor.spec  SystemLog.py  Validation.py  Version.py  WhatsNew.py  changes.md  fax_dump.json  faxes_response.txt  full_github_response.json  main.py  readme.md  requirements.txt  tree.txt
Admin/FRA/: FRA.py  FRA.spec
Admin/FRAAPI/: FRAAPI.spec  api_app.py  config.py  fraapi_host.py  fraapi_host_settings.json
Admin/licensing_server/: FRA Interaction Overview.md
Code Archive/v1/: AboutDialog.py  AddressBook.py  AutoUpdate.py  Customizations.py  FaxRetriever.spec  FaxStatusDialog.py  Options.py  RetrieveFax.py  SystemLog.py  Version.py  address_book.json  requirements.txt
Testing/: IniManip.py
docs/: 2.0 Logging Specifications.md  2.0 Schemas.md  FRA2 Architecture and Security Overview.md  FaxRetriever 2.0 and FaxRetrieverAdmin 2.0 - System Alignment Reference.md
hooks/: hook-fitz.py
images/Project Files/: Thumbs.db  new_banner.psd
integrations/: ComputerRx.py
sidecar/: fax-sidecar-x86_64-pc-windows-msvc.spec  main.py  registry.py
src/: keygen.py
tauri-app/: package-lock.json  package.json  vite.config.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs
(+98 files in other folders)
