[package]
name = "faxretriever"
version = "3.0.0"
description = "FaxRetriever — Pharmacy fax management"
authors = ["Clinic Networking, LLC"]
license = "Proprietary"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
